test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/ConceptDescription/invalidModelType.json.exception
Expected the model type 'ConceptDescription', but got aCompletelyInvalidModelType at: conceptDescriptions[0].modelType